smaller mobile nav & z-index fix

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -10,7 +10,7 @@ $margin-basic = 25px
 // $height-nav-main = 135px
 $height-nav-main = 93px
 // $height-nav-mobile = 135px
-$height-nav-mobile = 93px
+$height-nav-mobile = 80px
 
 // RESET
 
@@ -234,7 +234,7 @@ input
   position: fixed
   top: 0
   background: rgba(255,255,255,0.8)
-  z-index: 1
+  z-index: 999
   transform: translateY(-100%)
   transition: all 300ms
 
